0025893: Visualization, TKOpenGl - do not use uninitialized memory to track Clipping Planes state